error messages SMS inscription SMS

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -41,9 +41,11 @@
         <url-pattern>/vols</url-pattern>
     </servlet-mapping>
     
-    <servlet-mapping>
+     <servlet-mapping>
         <servlet-name>Alertes_sms</servlet-name>
         <url-pattern>/alertes_sms</url-pattern>
+        <url-pattern>/alertes_sms_Err1</url-pattern>
+        <url-pattern>/alertes_sms_Err2</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>FiltreDeparts</servlet-name>
