--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.json-simple-1.1.jar=G:\\json-simple-1.1.jar\\json-simple-1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -51,8 +50,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.json-simple-1.1.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
